--- a/UitleensysteemApp/app/templates/app/event-manager.html
+++ b/UitleensysteemApp/app/templates/app/event-manager.html
@@ -4,28 +4,72 @@
 
 {% block body %}
     {% if request.user.is_authenticated %}
-        <div class="grid grid-rows-[auto_1fr] gap-4 min-h-screen p-4 sm:mx-16">
-            <div class="grid items-center bg-gray-200 rounded-2xl mt-8 px-4 py-4 sm:px-8 sm:py-4 grid-cols-[1fr_auto]">
-                <h1 class="font-bold text-2xl text-slate-600">Events</h1>
-                <a class="bg-slate-600 px-4 py-2 sm:py-4 rounded-2xl text-center text-slate-400 font-medium" href="logout_view">logout</a>
-            </div>
-            <div class="grid gap-4 sm:gap-8 bg-gray-200 rounded-2xl p-4 sm:p-8 mb-8 grid-cols-1 sm:grid-cols-[3fr_1fr] sm:grid-rows-[1fr_19fr] grid-rows-[auto_1fr]">
-                <h1 class="sm:col-span-2 font-bold text-2xl text-slate-500 ">Event Manager</h2>
-                <div class="grid bg-slate-400 rounded-xl p-4 sm:p-8 gap-4">
+    <div class="grid grid-rows-[auto_1fr] gap-4 min-h-screen p-4 sm:mx-16">
+        <div class="grid items-center bg-gray-200 rounded-2xl mt-8 px-4 py-4 sm:px-8 sm:py-4 grid-cols-[1fr_auto]">
+            <h1 class="font-bold text-2xl text-slate-600">Events</h1>
+            <a class="bg-slate-600 px-4 py-2 sm:py-4 rounded-2xl text-center text-slate-400 font-medium" href="logout_view">logout</a>
+        </div>
+        <div class="grid gap-4 sm:gap-x-8 bg-gray-200 rounded-2xl p-4 sm:p-8 mb-8 grid-cols-1 sm:grid-cols-[3fr_1fr]  grid-rows-[auto_1fr]">
+            <h1 class="sm:col-span-2 font-bold text-2xl text-slate-500">Event Manager</h1>
+            <div class="grid bg-slate-400 rounded-xl gap-2 sm:px-8 sm:pb-8 p-4 ">
                     {% if messages %}
                     <div class="bg-yellow-300 rounded-md p-4 text-slate-600 text-center">
                         {% for message in messages %}
                             <div class="toast {{ message.tags }}">{{ message }}</div>
                         {% endfor %}
                     </div>
+
                     {% endif %}
+                    <h2 class="text-xl text-slate-100 font-medium">Create New Event</h2>
                     {% if calendar_events %}
                         <ul class="grid gap-4">
+                            <li class="bg-slate-700 rounded-xl p-4">
+                                <form method="post" action="event-manager" id="Create">{% csrf_token %}
+                                    <div class="grid bg-slate-800 rounded-2xl p-4 gap-2">
+                                        <h3 class="text-white">Create New Event</h3>
+                                        <select class="text-slate-800" name="event_type" >
+                                        {% for eventtype in event_types %}
+                                            <option value='{{ eventtype.type }}'>{{ eventtype.type }}</option>
+                                        {% endfor %}
+                                        </select>
+
+                                        <select class="text-slate-800" name="item_naam" >
+                                            {% for item in items %}
+                                                {% if calendar_event.eventid.itemid.naam == item.naam %}
+                                                    <option value='{{ item.naam }}' selected>{{ item.naam }}</option>
+                                                {% else %}
+                                                    <option value='{{ item.naam }}'>{{ item.naam }}</option>
+                                                {% endif %}
+                                            {% endfor %}
+                                        </select>
+
+                                        <select class="text-slate-800" name="user_username">
+                                            {% for user in users %}
+                                                {% if calendar_event.calendarid.userid.username == user.username %}
+                                                    <option value='{{ user.username }}' selected>{{ user.username }}</option>
+                                                {% else %}
+                                                    <option value='{{ user.username }}'>{{ user.username }}</option>
+                                                {% endif %}
+                                            {% endfor %}
+                                        </select>
+
+                                        <input type="date" name="start_date" value="{{ calendar_event.eventid.start|date:'Y-m-d' }}"></input>
+                                        <input type="date" name="end_date" value="{{ calendar_event.eventid.end|date:'Y-m-d' }}"></input>
+
+                                    </div>
+                                    <div class="flex place-content-end gap-4 py-4">
+                                        <input type="hidden" name="event_id" value="{{ calendar_event.id }}">
+                                        <button type="submit" name="action" class="bg-blue-200 p-4 rounded-xl min-w-40 text-center" value="Create"form="Create">Create</button>
+                                    </div>
+                                </form>
+                            </li>
+                            <h2 class="text-xl text-slate-100 font-medium">Edit Events</h2>
+
                             {% for calendar_event in calendar_events %}
                                 <li class="bg-slate-700 rounded-xl p-4">
                                     <form method="post" action="event-manager" id="{{ calendar_event.id }}">{% csrf_token %}
                                         <div class="grid bg-slate-800 rounded-2xl p-4 gap-2">
-                                            <h3 class="text-white">{{ calendar_event }}</h3>
+                                            <h3 class="text-white">{{ calendar_event.eventid }}</h3>
                                             <select class="text-slate-800" name="event_type" >
                                             {% for eventtype in event_types %}
                                                 {% if calendar_event.eventid.eventType.type == eventtype.type %}
@@ -47,6 +91,16 @@
                                                         <option value='{{ item.naam }}' selected>{{ item.naam }}</option>
                                                     {% else %}
                                                         <option value='{{ item.naam }}'>{{ item.naam }}</option>
+                                                    {% endif %}
+                                                {% endfor %}
+                                            </select>
+
+                                            <select class="text-slate-800" name="user_username">
+                                                {% for user in users %}
+                                                    {% if calendar_event.calendarid.userid.username == user.username %}
+                                                        <option value='{{ user.username }}' selected>{{ user.username }}</option>
+                                                    {% else %}
+                                                        <option value='{{ user.username }}'>{{ user.username }}</option>
                                                     {% endif %}
                                                 {% endfor %}
                                             </select>
@@ -85,7 +139,7 @@
                     {% endif %}
                 </div>
                 <div class="bg-slate-400 rounded-xl p-4 sm:p-8">
-                    <a class="grid bg-slate-700 rounded-xl p-4 text-slate-400" href="overview">Go Back</a>
+                    <a class="grid bg-slate-200 rounded-md place-content-center p-4 text-lg font-medium" href="overview">Go Back</a>
                 </div>
             </div>
         </div>
