--- a/UitleensysteemApp/app/templates/app/signup.html
+++ b/UitleensysteemApp/app/templates/app/signup.html
@@ -20,7 +20,7 @@
         <div class="grid space-y-1">
             <input class="bg-slate-600 rounded-md" placeholder="Email" id="email" name="email" value="{{ email }}" required>
             <input class="bg-slate-600 rounded-md" placeholder="Password" id="password" name="password" type="password" required>
-            <input class="bg-slate-600 rounded-md" placeholder="Confirm Password" id="passwordCheck" name="passwordCheck" type="password" required>
+            <input class="bg-slate-600 rounded-md" placeholder="Confirm Password" id="password_check" name="password_check" type="password" required>
         </div>
         <a href="signin"><h1 class="text-blue-600">Sign in? <u>Click here</u></h1></a>
         <input type="submit" class="bg-slate-600 rounded-md p-4 text-gray-300 text-center hover:bg-slate-800" value="Register"></input>
