--- a/UitleensysteemApp/app/templates/app/event-manager.html
+++ b/UitleensysteemApp/app/templates/app/event-manager.html
@@ -21,50 +21,52 @@
 
                     {% endif %}
                     <h2 class="text-xl text-slate-100 font-medium">Create New Event</h2>
-                    {% if calendar_events %}
-                        <ul class="grid gap-4">
-                            <li class="bg-slate-700 rounded-xl p-4">
-                                <form method="post" action="event-manager" id="Create">{% csrf_token %}
-                                    <div class="grid bg-slate-800 rounded-2xl p-4 gap-2">
-                                        <h3 class="text-white">Create New Event</h3>
-                                        <select class="text-slate-800" name="event_type" >
-                                        {% for eventtype in event_types %}
-                                            <option value='{{ eventtype.type }}'>{{ eventtype.type }}</option>
+                    <ul class="grid gap-4">
+                        <li class="bg-slate-700 rounded-xl p-4">
+                            <form method="post" action="event-manager" id="Create">{% csrf_token %}
+                                <div class="grid bg-slate-800 rounded-2xl p-4 gap-2">
+                                    <h3 class="text-white">Create New Event</h3>
+                                    <select class="text-slate-800" name="event_type" >
+                                    {% for eventtype in event_types %}
+                                        {% if eventtype.type == event_type %}
+                                            <option value='{{ eventtype.type }}' selected>{{ eventtype.type }}</option>
+                                            {% else %}
+                                                <option value='{{ eventtype.type }}'>{{ eventtype.type }}</option>
+                                        {% endif %}
+                                    {% endfor %}
+                                    </select>
+
+                                    <select class="text-slate-800" name="item_naam" >
+                                        {% for item in items %}
+                                            {% if item.naam == item_naam %}
+                                                <option value='{{ item.naam }}' selected>{{ item.naam }}</option>
+                                            {% else %}
+                                                <option value='{{ item.naam }}'>{{ item.naam }}</option>
+                                            {% endif %}
                                         {% endfor %}
-                                        </select>
+                                    </select>
 
-                                        <select class="text-slate-800" name="item_naam" >
-                                            {% for item in items %}
-                                                {% if calendar_event.eventid.itemid.naam == item.naam %}
-                                                    <option value='{{ item.naam }}' selected>{{ item.naam }}</option>
-                                                {% else %}
-                                                    <option value='{{ item.naam }}'>{{ item.naam }}</option>
-                                                {% endif %}
-                                            {% endfor %}
-                                        </select>
+                                    <select class="text-slate-800" name="user_username">
+                                        {% for user in users %}
+                                            {% if user.username == user_username %}
+                                                <option value='{{ user.username }}' selected>{{ user.username }}</option>
+                                            {% else %}
+                                                <option value='{{ user.username }}'>{{ user.username }}</option>
+                                            {% endif %}
+                                        {% endfor %}
+                                    </select>
 
-                                        <select class="text-slate-800" name="user_username">
-                                            {% for user in users %}
-                                                {% if calendar_event.calendarid.userid.username == user.username %}
-                                                    <option value='{{ user.username }}' selected>{{ user.username }}</option>
-                                                {% else %}
-                                                    <option value='{{ user.username }}'>{{ user.username }}</option>
-                                                {% endif %}
-                                            {% endfor %}
-                                        </select>
+                                    <input type="date" name="start_date" value="{{ start_date }}"></input>
+                                    <input type="date" name="end_date" value="{{ end_date }}"></input>
 
-                                        <input type="date" name="start_date" value="{{ calendar_event.eventid.start|date:'Y-m-d' }}"></input>
-                                        <input type="date" name="end_date" value="{{ calendar_event.eventid.end|date:'Y-m-d' }}"></input>
-
-                                    </div>
-                                    <div class="flex place-content-end gap-4 py-4">
-                                        <input type="hidden" name="event_id" value="{{ calendar_event.id }}">
-                                        <button type="submit" name="action" class="bg-blue-200 p-4 rounded-xl min-w-40 text-center" value="Create"form="Create">Create</button>
-                                    </div>
-                                </form>
-                            </li>
-                            <h2 class="text-xl text-slate-100 font-medium">Edit Events</h2>
-
+                                </div>
+                                <div class="flex place-content-end gap-4 py-4">
+                                    <button type="submit" name="action" class="bg-blue-200 p-4 rounded-xl min-w-40 text-center" value="Create"form="Create">Create</button>
+                                </div>
+                            </form>
+                        </li>
+                        <h2 class="text-xl text-slate-100 font-medium">Edit Events</h2>
+                        {% if calendar_events %}
                             {% for calendar_event in calendar_events %}
                                 <li class="bg-slate-700 rounded-xl p-4">
                                     <form method="post" action="event-manager" id="{{ calendar_event.id }}">{% csrf_token %}
@@ -126,17 +128,18 @@
 
                                         </div>
                                         <div class="flex place-content-end gap-4 py-4">
-                                            <input type="hidden" name="event_id" value="{{ calendar_event.id }}">
+                                            <input type="hidden" name="event_id" value="{{ calendar_event.eventid.id }}">
+                                            <input type="hidden" name="calendar_event_id" value="{{ calendar_event.eventid.id }}">
                                             <button type="submit" name="action" class="bg-red-200 p-4 rounded-xl min-w-40 text-center" value="Delete" form="{{ calendar_event.id }}">Delete</button>
                                             <button type="submit" name="action" class="bg-green-200 p-4 rounded-xl min-w-40 text-center" value="Update"form="{{ calendar_event.id }}">Update</button>
                                         </div>
                                     </form>
                                 </li>
                             {% endfor %}
-                        </ul>
-                    {% else %}
-                        <p>No events available</p>
-                    {% endif %}
+                            </ul>
+                        {% else %}
+                            <p>No events available</p>
+                        {% endif %}
                 </div>
                 <div class="bg-slate-400 rounded-xl p-4 sm:p-8">
                     <a class="grid bg-slate-200 rounded-md place-content-center p-4 text-lg font-medium" href="overview">Go Back</a>
